Add loader using css

--- a/index.html
+++ b/index.html
@@ -8,5 +8,12 @@
     </head>
     <body>
         <h1>Loading Animation</h1>
+        <section>
+            <!-- Todo: Lader -->
+            <div id="loader-parent" class="parent-flex">
+                <div class="loader1"></div>
+                <div class="loader2"></div>
+            </div>
+        </section>
     </body>
 </html>
